# schema-recovery-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  main.py  schemas.py
backend/agent/: orchestrator.py  router.py
backend/agent/memory/: global_memory.py  memory_manager.py  schema_memory.py  session_memory.py
backend/agent/workers/: base.py  code.py  column.py  merge.py  name.py  orm.py  survey.py
backend/eval/: judge.py  report.py  test_runner.py
backend/langgraph/: __init__.py  builder.py  state.py
backend/langgraph/edges/: __init__.py  conditions.py
backend/langgraph/nodes/: __init__.py  analysis_nodes.py
backend/mcp/: server.py  tool_registry.py
backend/mcp/tools/: code_tools.py  column_tools.py  name_tools.py  orm_tools.py  survey_tools.py
backend/monitor/: recorder.py  weight_updater.py
backend/scripts/: init_db.py  seed_data.py
backend/sim_env/: mysql_simulator.py
backend/tests/: test_eval.py  test_memory.py  test_orchestrator.py  test_survey.py  test_tools.py  test_workers.py
data/: seed_data.sql  sim_schema.sql  sim_sp.sql
data/eval/: test_cases.json
data/orm/: CouponMapper.xml  OrderMapper.xml  ProductMapper.xml  ReviewMapper.xml  UserMapper.xml
docs/: 01-项目骨架与模拟数据库.md  02-MCP工具定义.md  03-Worker实现.md  04-核心编排-Router-Orchestrator-记忆.md  05-监控-评测-部署-面试话术.md  LangGraph改进方案.md  前端开发计划.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  styles.css
frontend/src/hooks/: useAnalysis.ts  useEval.ts  useMonitor.ts
(+20 files in other folders)
